--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-html, 
+html,
 body,
-:root{
+:root {
     height: 100%;
+}
+
+.leaflet-bottom,
+.leaflet-control,
+.leaflet-pane,
+.leaflet-top {
+    z-index: 0 !important;
 }
